tests/snapshots/serde__display_uint32array_resizable_with_data.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst a = new Uint32Array(new ArrayBuffer(8, { maxByteLength: 12 })); a.set([1, 2]); a"
---
const v0 = new ArrayBuffer(8, { maxByteLength: 12 });
new Uint32Array(v0).set([
  0x01, 0x02,
]);
new Uint32Array(v0)
