tests/snapshots/serde__display_uint32array_subarray.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint32Array([1, 2]).subarray(1, 2)"
---
new Uint32Array([
  0x01, 0x02,
]).subarray(1, 2)
