tests/snapshots/serde__display_uint32array_zeroed.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint32Array(2)"
---
new Uint32Array(2)
