tests/snapshots/serde__display_uint32array_zeroed2.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint32Array([0, 0, 0])"
---
new Uint32Array(3)
