tests/snapshots/serde__display_uint8array_one_byte.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint8Array([1])"
---
new Uint8Array([
  0x01,
])
