tests/snapshots/serde__display_uint8array_subarray.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint8Array([1, 2]).subarray(1, 2)"
---
new Uint8Array([
  0x01, 0x02,
]).subarray(1, 2)
